Add option to allow saving images with/without original filenames

--- a/src/options.html
+++ b/src/options.html
@@ -2,7 +2,8 @@
 <html>
     <head><title>4chan Archiver Options</title></head>
     <body>
-        <button id="directory">Choose folder</button><span id="label"></span>
+      <button id="directory">Choose folder</button><span id="label"></span><br />
+      <input type="checkbox" id="original_filename" /><label for="original_filename">Save images with original filenames</label>
     </body>
     <script src="options.js"></script>
 </html>
